src/snapshots/hemlis_lib__parser__tests__expr_ado.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n        ado\n            a <- f 2\n            b <- g a\n            fazz 1 2\n            in b + a\n        \")"
---
27 of 27
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Ado
     NULL
     (3, 8)->(3, 11)
      DoStmt::Stmt
       Binder::Var
        Name
         (4, 12)->(4, 13)
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (4, 17)->(4, 18)
        Expr::Number
         Number
          (4, 19)->(4, 20)
      DoStmt::Stmt
       Binder::Var
        Name
         (5, 12)->(5, 13)
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (5, 17)->(5, 18)
        Expr::Ident
         QName
          NULL
          Name
           (5, 19)->(5, 20)
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::App
         Expr::Ident
          QName
           NULL
           Name
            (6, 12)->(6, 16)
         Expr::Number
          Number
           (6, 17)->(6, 18)
        Expr::Number
         Number
          (6, 19)->(6, 20)
     Expr::Op
      Expr::Ident
       QName
        NULL
        Name
         (7, 15)->(7, 16)
      QOp
       NULL
       Op
        (7, 17)->(7, 18)
      Expr::Ident
       QName
        NULL
        Name
         (7, 19)->(7, 20)
===
