src/snapshots/hemlis_lib__parser__tests__expr_ado_b.snap
---
source: src/parser.rs
expression: "p_expr(r\" ado\n                    a <- f 2\n                    in a\n            \")"
---
16 of 16
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Ado
     NULL
     (2, 5)->(2, 8)
      DoStmt::Stmt
       Binder::Var
        Name
         (3, 20)->(3, 21)
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (3, 25)->(3, 26)
        Expr::Number
         Number
          (3, 27)->(3, 28)
     Expr::Ident
      QName
       NULL
       Name
        (4, 23)->(4, 24)
===
