src/snapshots/hemlis_lib__parser__tests__expr_do.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n        do\n            a <- f 2\n            b <- g a\n            fazz 1 2\n            let \n                a = 1\n            pure (b + a)\n        \")"
---
37 of 37
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Do
     NULL
     (3, 8)->(3, 10)
      DoStmt::Stmt
       Binder::Var
        Name
         (4, 12)->(4, 13)
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (4, 17)->(4, 18)
        Expr::Number
         Number
          (4, 19)->(4, 20)
      DoStmt::Stmt
       Binder::Var
        Name
         (5, 12)->(5, 13)
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (5, 17)->(5, 18)
        Expr::Ident
         QName
          NULL
          Name
           (5, 19)->(5, 20)
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::App
         Expr::Ident
          QName
           NULL
           Name
            (6, 12)->(6, 16)
         Expr::Number
          Number
           (6, 17)->(6, 18)
        Expr::Number
         Number
          (6, 19)->(6, 20)
      DoStmt::Let
        LetBinding::Name
         Name
          (8, 16)->(8, 17)
         GuardedExpr::Unconditional
          Expr::Number
           Number
            (8, 20)->(8, 21)
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (9, 12)->(9, 16)
        Expr::Paren
         (9, 17)->(9, 18)
         Expr::Op
          Expr::Ident
           QName
            NULL
            Name
             (9, 18)->(9, 19)
          QOp
           NULL
           Op
            (9, 20)->(9, 21)
          Expr::Ident
           QName
            NULL
            Name
             (9, 22)->(9, 23)
         (9, 23)->(9, 24)
===
