src/snapshots/hemlis_lib__parser__tests__expr_messy.snap
---
source: src/parser.rs
expression: "p_expr(\"(1 + 1) * 2 + foo @A `a + b` A.B.C.d A.B.+ q :: Int\")"
---
30 of 30
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Typed
     Expr::Op
      Expr::Op
       Expr::Op
        Expr::Paren
         (2, 4)->(2, 5)
         Expr::Op
          Expr::Number
           Number
            (2, 5)->(2, 6)
          QOp
           NULL
           Op
            (2, 7)->(2, 8)
          Expr::Number
           Number
            (2, 9)->(2, 10)
         (2, 10)->(2, 11)
        QOp
         NULL
         Op
          (2, 12)->(2, 13)
        Expr::Number
         Number
          (2, 14)->(2, 15)
       QOp
        NULL
        Op
         (2, 16)->(2, 17)
       Expr::Infix
        Expr::Vta
         Expr::Ident
          QName
           NULL
           Name
            (2, 18)->(2, 21)
         Typ::Constructor
          QProperName
           NULL
           ProperName
            (2, 23)->(2, 24)
        Expr::Op
         Expr::Ident
          QName
           NULL
           Name
            (2, 26)->(2, 27)
         QOp
          NULL
          Op
           (2, 28)->(2, 29)
         Expr::Ident
          QName
           NULL
           Name
            (2, 30)->(2, 31)
        Expr::Ident
         QName
          Qual
           (2, 33)->(2, 38)
          Name
           (2, 39)->(2, 40)
      QOp
       Qual
        (2, 41)->(2, 44)
       Op
        (2, 45)->(2, 46)
      Expr::Ident
       QName
        NULL
        Name
         (2, 47)->(2, 48)
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (2, 52)->(2, 55)
===
